# stegasoo

./: .dockerignore  .git-credentials  .gitignore  .pre-commit-config.yaml  API.md  CHANGELOG.md  CLI.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  Dockerfile.base  INSTALL.md  LICENSE  PLAN-4.1.0.md  PLAN-4.1.2.md  PLAN-4.1.3.md  PLAN-4.1.4.md  PLAN-4.1.5.md  PLAN-4.1.6.md  README.md  README_NEW.md  RELEASE-4.1.1.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SECURITY.md  SECURITY_AUDIT_PLAN.md  TODO-4.2.1.md  UNDER_THE_HOOD.md  WEB_UI.md  WISHLIST-4.2.md  app.py  build.sh  check_scipy.py  debug_jpegio.py  docker-compose.yml  minimal_flask_crash.py  pyproject.toml  quick_web.sh  requirements-ml.txt  requirements.txt  (+5 more)
.github/: CI_CD_PRIMER.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: lint.yml  release.yml  test.yml
aur/: PKGBUILD  README.md  stegasoo-git.install  test-build.sh
aur-api/: .SRCINFO  PKGBUILD  README.md  stegasoo-api-git.install  test-build.sh
aur-cli/: .SRCINFO  PKGBUILD  README.md  stegasoo-cli-git.install  test-build.sh
data/: README.md
docker/: Dockerfile  Dockerfile.base  docker-compose.yml
docs/: DOCKER_QUICKSTART.md  TEMPLATES.md  stegasoo.1
examples/: README.md  basic_usage.py  channel_keys.py  embed_file.py
frontends/: API.md  CLI.md  WEB_UI.md
frontends/api/: API_UPDATE_SUMMARY_V3.2.0.md  auth.py  main.py
frontends/cli/: main.py  main.py_old
frontends/web/: .env.example  README_subprocess.md  WEB_FRONTEND_UPDATE_SUMMARY_V3.2.0.md  app.py  app.py.orig  app.py_20251229  auth.py  dev_run.sh  docker-entrypoint.sh  ssl_utils.py  stego_worker.py  subprocess_stego.py  temp_storage.py  test_routes.py
frontends/web/static/: .logo.svg.kate-swp  style.css  style.css_20251228
frontends/web/static/js/: auth.js  generate.js  stegasoo.js
frontends/web/templates/: about.html  account.html  base.html  decode.html  encode.html  encode_result.html  generate.html  index.html  index.html_20251228  login.html  recover.html  regenerate_recovery.html  setup.html  setup_recovery.html  tools.html
frontends/web/templates/admin/: password_reset.html  settings.html  user_created.html  user_new.html  users.html
instance/: .secret_key  stegasoo.db
patches/: 01_stegasoo_init_decode.patch  02_decode_html_date_field.patch  03_app_py_decode_date.patch
rpi/: BUILD_IMAGE.md  README.md  banner.sh  build-runtime-tarball.sh  config.json.example  first-boot-wizard.sh  flash-image.sh  flash-pi.sh  flash-stock-img.sh  host-requirements.txt  inject-wifi.sh  kickoff-pi-test.sh  pull-image.sh  remote-build-pi.sh  sanitize-for-image.sh  setup.sh  smoke-test.sh  stegasoo-wizard.sh  stegasoo.conf.example
rpi/patches/: README.md
rpi/patches/jpegio/: apply-patch.sh  arm64.patch
rpi/patches/jpeglib/: install-jpeglib-arm64.sh
rpi/skel/: .bashrc
scripts/: build.sh  screenshots.sh  setup-trusted-certs.sh  smoke-test.sh  validate-release.sh
src/: main.py
src/stegasoo/: COMPLETE_CHANGE_SUMMARY_V3.2.0.md  Dockerfile  __init__.py  batch.py  channel.py  cli.py  compression.py  constants.py  crypto.py  dct_steganography.py  dct_steganography.py_old  debug.py  decode.py  encode.py  exceptions.py  generate.py  image_utils.py  keygen.py  models.py  qr_utils.py  recovery.py  steganography.py  utils.py  validation.py
src/stegasoo/data/: __init__.py
src_20251228/stegasoo/: cli.py  constants.py  exceptions.py  models.py  qr_utils.py  steganography.py  utils.py  validation.py
static/: style.css
templates/: about.html  base.html  decode.html  encode.html  encode_result.html  generate.html  index.html
test_data/: phonebooth.pem  scandal.txt.gz.b64  stegasoo_key_4096_5e663335.pem  stego.pem
tests/: RELEASE_CHECKLIST_V3.2.0.md  RELEASE_CHECKLIST_V4_0_0.md  test_batch.py  test_compression.py  test_stegasoo.py
v1_old_files/: .dockerignore  Dockerfile  README.md  requirements.txt  secureDeleter.py
v1_old_files/static/: style.css
v1_old_files/templates/: about.html  decode.html  encode_result.html
